refactor: class/id css

--- a/index.html
+++ b/index.html
@@ -335,13 +335,14 @@
                 </div>
             </div>
         </section>
-        <div id="wandibackKomponen">
+        <!-- Start Komponen -->
+        <div id="frame6">
             <p class="text-center fs-1 fw-bold py-5">Kenali Komponen VR</p>
             <div class="float-end me-5">
-              <div id="wandiDekorasiKomponen1"></div>
-              <div class="mt-1 ms-5" id="wandiDekorasiKomponen2"></div>
+              <div id="dekorasiKomponen1"></div>
+              <div class="mt-1 ms-5" id="dekorasiKomponen2"></div>
             </div>
-            <div class="">
+            <div class="isiFrame6">
               <div class="row" style="width: 100%;">
                 <div class="col">
                   <!-- dawadaw -->
@@ -371,43 +372,45 @@
               </div>
             </div>
             <div class="ms-5 mt-5">
-              <div id="wandiDekorasiKomponen1"></div>
-              <div class="mt-1 ms-5" id="wandiDekorasiKomponen2"></div>
+              <div id="dekorasiKomponen1"></div>
+              <div class="mt-1 ms-5" id="dekorasiKomponen2"></div>
             </div>
           </div>
+        <!-- End Komponen  -->
       
-          <!-- Halaman Banding -->
+          <!-- Start Halaman Banding -->
+        <div id="frame7">
           <img src="assets/img/head-vr.png" id="gambartesting" class="mt-5" />
           <div class="row container-fluid mt-5">
-            <div class="col ms-4" id="adaaja">
-              <p class="fw-bold lh-base" id="wandiPerbandingan">
+            <div class="col ms-4 adaaja">
+              <p class="fw-bold lh-base" id="judulPerbandingan">
                 Bandingkan Dengan Yang Lain
               </p>
-              <div id="wandikelompok" class="p-5">
+              <div id="kelompokForm" class="p-5">
                 <input
-                  id="wandiForm1"
+                  id="bandingkanForm1"
                   class="form-control"
                   type="text"
                   placeholder="Nama produk"
                 />
                 <div class="d-flex mt-2">
                   <input
-                    id="wandiForm"
+                    id="bandingkanForm"
                     class="form-control"
                     type="text"
                     placeholder="Nama produk"
                   />
                   <button
-                    class="ms-3 rounded btn fw-semibold text-center"
-                    id="buttonbandingkantext"
+                    class="mx-3 rounded btn fw-semibold text-center"
+                    id="buttonbandingkankiri"
                   >
                     Bandingkan
                   </button>
                 </div>
               </div>
               <div class="mt-5">
-                <div id="wandidekorasi1"></div>
-                <div class="mt-1" id="wandidekorasi2"></div>
+                <div id="dekorasiBandingkan1"></div>
+                <div class="mt-1" id="dekorasiBandingkan2"></div>
               </div>
             </div>
             <div class="col">
@@ -429,8 +432,10 @@
               </div>
             </div>
           </div>
+        </div>
+          <!-- End Halaman Banding -->
       
-          <!-- Halaman Footer -->
+          <!-- Start Halaman Footer -->
           <div class="row ps-5" id="footer">
             <div class="col">
               <ul class="fw-light">
@@ -474,5 +479,6 @@
               </div>
             </div>
           </div>
+          <!-- End Halaman -->
 </body>
 </html>
