--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="title">Lihat Dunia <br>   Berbeda</h1>
                 <div class="btn-hp d-flex gap-2">
                     <button class="btn btn-hp1">Lihat VR</button>
-                    <button class="btn btn-hp2">Bandingkan</button>
+                    <button class="btn btn-hp2 text-dark">Bandingkan</button>
                 </div>
                 <hr>
                 <div class="preview d-flex align-items-center gap-3">
