--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       
           <!-- Start Halaman Banding -->
         <div id="frame7">
-          <img src="assets/img/head-vr.png" id="gambartesting" class="mt-5" />
+          <img src="assets/img/head-vr.png" id="gambartesting" class="mt-5 w-100" />
           <div class="row container-fluid mt-5">
             <div class="col ms-4 adaaja">
               <p class="fw-bold lh-base" id="judulPerbandingan">
