--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <!-- homepage -->
-    <section id="frame1" class="container">
+    <section id="frame1" >
         <!-- navbar -->
-        <nav class="navbar nav text-dark p-2 pt-4 ">
+        <nav class="navbar nav text-dark p-2 pt-5">
             <ul class="d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
                 <li class="nav-item active">Beranda</li>
                 <li class="nav-item">VR</li>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="item3">
                         <img src="assets/img/images 2.png" alt="">
-                        <button class="teks3 border-0 rounded rounded-4 pe-3 ps-3">Fana Jadi Nyata</button>
+                        <button class="teks3 border-0 rounded rounded-4 pe-3 ps-3">Pengalaman Baru</button>
                     </div>
                 </div>
                 <hr>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="right-content">
-                <div class="rectangle position-relative">
+                <div class="rectangle rec-height position-relative">
                     <div class="teks-vision position-absolute">
                         <h1 class="vision">VISION</h1>
                     </div>
@@ -114,7 +114,7 @@
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="middle">
-                <h1 class="text-back">FEATURED</h1>
+                <h1 class="text-back">UGGULAN</h1>
                 <div class="parent-card">
                     <div class="card">
                         <img src="assets/img/Rectangle 173.png" alt="">
@@ -480,5 +480,6 @@
             </div>
           </div>
           <!-- End Halaman -->
+           <script src="assets/js/script.js"></script>
 </body>
 </html>
