--- a/index.html
+++ b/index.html
@@ -348,16 +348,16 @@
                   <!-- dawadaw -->
                    <div class="row row-cols-2 mx-5">
                     <div class="col">
-                      <img src="assets/img/komponen.png" class="border rounded-4">
+                      <img src="assets/img/controller.png" class="border rounded-4">
                     </div>
                     <div class="col">
                       <img src="assets/img/komponen.png" class="border rounded-4">
                     </div>
                     <div class="col">
-                      <img src="assets/img/komponen.png" class="border rounded-4 mt-3">
+                      <img src="assets/img/ikatKepala.png" class="border rounded-4 mt-3">
                     </div>
                     <div class="col">
-                      <img src="assets/img/komponen.png" class="border rounded-4 mt-3">
+                      <img src="assets/img/mesin.jpeg" class="border rounded-4 mt-3">
                     </div>
                    </div>
                   <!-- dawadaw -->
@@ -415,13 +415,13 @@
             </div>
             <div class="col">
               <div class="d-flex">
-                <div class="">
-                  <img src="assets/img/valve.jfif" class="border-bottom rounded-4 mb-3" />
-                  <img src="assets/img/valve.jfif" class="border-bottom rounded-4" />
+                <div class="gambarBanding">
+                  <img src="assets/img/Rectangle 173.png" class="border-bottom rounded-4 mb-3" />
+                  <img src="assets/img\/download 3.png" class="border-bottom rounded-4" />
                 </div>
-                <div class="">
-                  <img src="assets/img/valve.jfif" class="border-bottom rounded-4 mb-3" />
-                  <img src="assets/img/valve.jfif" class="border-bottom rounded-4" />
+                <div class="gambarBanding">
+                  <img src="assets/img/Rectangle 175.png" class="border-bottom rounded-4 mb-3" />
+                  <img src="assets/img/download 5.png" class="border-bottom rounded-4" />
                 </div>
               </div>
               <div class="d-flex justify-content-center mt-3">
