update responsive all dekstop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     ">
     <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
 </head>
@@ -28,14 +29,14 @@
         <!-- content homepage -->
         <div class="parent-content">
             <div class="left-content">
-                <p class="sub-title">Virtual Reality</p>
-                <h1 class="title">Lihat Dunia <br>   Berbeda</h1>
+                <p class="sub-title ">Virtual Reality</p>
+                <h1 class="title">Lihat Dunia Berbeda</h1>
                 <div class="btn-hp d-flex gap-2">
                     <button class="btn btn-hp1">Lihat VR</button>
                     <button class="btn btn-hp2 text-dark">Bandingkan</button>
                 </div>
                 <hr>
-                <div class="preview d-flex align-items-center gap-3">
+                <div class="preview align-items-center gap-3">
                     <div class="item1">
                         <img src="assets/img/Group 139.png" alt="">
                         <button class="teks1 border-0 rounded rounded-4 pe-3 ps-3">Kacamata VR</button>
