update responsive mobile

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     <button class="btn btn-hp1">Lihat VR</button>
                     <button class="btn btn-hp2 text-dark">Bandingkan</button>
                 </div>
-                <hr>
-                <div class="preview align-items-center gap-3">
+                <div class="parent-preview">
+                    <hr>
+                    <div class="preview align-items-center gap-3">
                     <div class="item1">
                         <img src="assets/img/Group 139.png" alt="">
                         <button class="teks1 border-0 rounded rounded-4 pe-3 ps-3">Kacamata VR</button>
@@ -54,6 +55,7 @@
                 <center>
                     <a href="#scroll"><i class="fa-solid fa-angles-down icon-scroll text-light"></i></a>
                 </center>
+            </div>
             </div>
 
             <div class="right-content">
