update responsive mobile

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                     <div class="quote mt-5 me-5">
                         <center>
-                            <b>“The metaverse has become the newest macro goal <br> 
+                            <b>“The metaverse has become the newest macro goal 
                                 for many of the world’s tech giant”</b>
                                 <br>
                             <i>Matthew Ball</i>
