responsive page-spec done

--- a/page-extra/page-bandingkan.html
+++ b/page-extra/page-bandingkan.html
@@ -52,23 +52,19 @@
             <h1 class="fs-4 fw-semibold mb-2 text-white">Desain</h1>
             <div class="gap-1 d-flex flex-column">
               <div class="dropdown">
-                <select id="warna" class="form-select">
-                </select>
+                <select id="warna" class="form-select"></select>
               </div>
 
               <div class="dropdown">
-                <select id="berat" class="form-select">
-                </select>
+                <select id="berat" class="form-select"></select>
               </div>
 
               <div class="dropdown">
-                <select id="baterai" class="form-select">
-                </select>
+                <select id="baterai" class="form-select"></select>
               </div>
 
               <div class="dropdown">
-                <select id="lebar" class="form-select">
-                </select>
+                <select id="lebar" class="form-select"></select>
               </div>
             </div>
           </div>
@@ -77,18 +73,15 @@
             <h1 class="fs-4 fw-semibold mb-2 text-white">Kinerja</h1>
             <div class="gap-1 d-flex flex-column">
               <div class="dropdown">
-                <select id="ram" class="form-select">
-                </select>
+                <select id="ram" class="form-select"></select>
               </div>
 
               <div class="dropdown">
-                <select id="storage" class="form-select">
-                </select>
+                <select id="storage" class="form-select"></select>
               </div>
 
               <div class="dropdown">
-                <select id="os" class="form-select">
-                </select>
+                <select id="os" class="form-select"></select>
               </div>
             </div>
           </div>
@@ -150,15 +143,24 @@
           <!-- data informasi -->
         </div>
       </div>
-      <div class="add-banding d-flex justify-content-center m-5 flex-column  align-items-end" id="add-banding">
-        <div id="optionaddBanding" class="p-1 w-100 rounded-top-2 text-center text-white">
-        </div>
-        <button onclick="toggleBanding()" class="btn rounded-bottom-2 rounded-top-0 d-flex justify-content-between gap-2 align-content-center p-2">
-          <img src="../assets/icon/angle-up.png" width="20px" alt="">
-          <a href="page-hasil.html" class="m-0 text-white text-decoration-none">Bandingkan produk</a>
+      <div
+        class="add-banding d-flex justify-content-center m-5 flex-column align-items-end"
+        id="add-banding"
+      >
+        <div
+          id="optionaddBanding"
+          class="p-1 w-100 rounded-top-2 text-center text-white"
+        ></div>
+        <button
+          onclick="toggleBanding()"
+          class="btn rounded-bottom-2 rounded-top-0 d-flex justify-content-between gap-2 align-content-center p-2"
+        >
+          <img src="../assets/icon/angle-up.png" width="20px" alt="" />
+          <a href="page-hasil.html" class="m-0 text-white text-decoration-none"
+            >Bandingkan produk</a
+          >
         </button>
       </div>
-      
 
       <!-- Content - Bandingkan end -->
 
@@ -232,7 +234,10 @@
           <p>© Copyright 2024 by The Visionaries</p>
           <div class="d-flex">
             <a href="#"
-              ><img width="50px" src="../assets/icon/Facebook.png" alt="Facebook"
+              ><img
+                width="50px"
+                src="../assets/icon/Facebook.png"
+                alt="Facebook"
             /></a>
             <a href="#"
               ><img
