--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -45,9 +45,9 @@
       <!-- Navbar banding end -->
 
       <!-- content banding start -->
-       <div id="content">
+      <div id="content">
         <!-- data informasi -->
-       </div>
+      </div>
       <!-- content banding end -->
       <!-- footer start -->
       <footer style="margin-top: 7rem">
@@ -119,7 +119,10 @@
           <p>© Copyright 2024 by The Visionaries</p>
           <div class="d-flex">
             <a href="#"
-              ><img width="50px" src="../assets/icon/Facebook.png" alt="Facebook"
+              ><img
+                width="50px"
+                src="../assets/icon/Facebook.png"
+                alt="Facebook"
             /></a>
             <a href="#"
               ><img
