--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -375,7 +375,10 @@
           <p>© Copyright 2024 by The Visionaries</p>
           <div class="d-flex">
             <a href="#"
-              ><img width="50px" src="../assets/icon/Facebook.png" alt="Facebook"
+              ><img
+                width="50px"
+                src="../assets/icon/Facebook.png"
+                alt="Facebook"
             /></a>
             <a href="#"
               ><img
