responsive page-panduan done

--- a/page-extra/page-panduan.html
+++ b/page-extra/page-panduan.html
@@ -16,7 +16,7 @@
     <!-- Vision - panduan start-->
     <section-panduan>
       <!-- Navbar - panduan start -->
-      <nav class="navbar navbar-expand-lg m-5 mb-4">
+      <!-- <nav class="navbar navbar-expand-lg m-5 mb-4">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div
@@ -41,13 +41,13 @@
             </div>
           </div>
         </div>
-      </nav>
+      </nav> -->
       <!-- Navbar - panduan end -->
 
       <!-- Title - panduan start -->
       <div class="mb-4">
-        <div class="tittle d-flex justify-content-center align-items-center">
-          <h1 class="fw-semibold fs-1">Panduan Memakai VR</h1>
+        <div class="title d-flex justify-content-center align-items-center">
+          <h1 class="fw-semibold">Panduan Memakai VR</h1>
           <div class="icon-panduan-title">
             <img
               src="../assets/icon/kuning-panduan.png"
@@ -102,10 +102,9 @@
           ></button>
         </div>
         <div
-          class="carousel-inner d-flex justify-content-center align-content-center"
+          class="carousel-inner d-flex justify-content-center flex-column align-content-center"
         >
           <div
-            style="width: 15px; height: 15px; left: 21.5vh"
             class="position-absolute kotak-biru-kiri"
           ></div>
           <center>
@@ -116,7 +115,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">01. Siapkan Perangkat:</h5>
+                <h5 class="fw-semibold">01. Siapkan Perangkat:</h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
                   Headset VR: Pastikan headset VR Anda sudah terisi daya dan
@@ -137,7 +136,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">
+                <h5 class="fw-semibold">
                   02. Unduh dan Instal Aplikasi VR
                 </h5>
                 <br />
@@ -161,8 +160,8 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">
-                  03. Hubungkan Headset VR dengan Perangkat:
+                <h5 class="fw-semibold">
+                  03. Hubungkan Headset VR <br> dengan Perangkat:
                 </h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
@@ -182,7 +181,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">04. Konfigurasi Pengaturan:</h5>
+                <h5 class="fw-semibold">04. Konfigurasi Pengaturan:</h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
                   Pengaturan Layar: Atur resolusi, tingkat kecerahan, dan jarak
@@ -203,7 +202,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">05. Mulai Pengalaman VR:</h5>
+                <h5 class="fw-semibold">05. Mulai Pengalaman VR:</h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
                   Jalankan Aplikasi: Setelah semua pengaturan selesai, jalankan
@@ -225,7 +224,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">Tips Tambahan:</h5>
+                <h5 class="fw-semibold">Tips Tambahan:</h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
                   01. Ruang yang Cukup: Pastikan Anda memiliki ruang yang cukup
@@ -250,7 +249,7 @@
                 alt="img-carousel-panduan"
               />
               <div class="carousel-caption text-start">
-                <h5 class="fs-5 fw-semibold">Penting:</h5>
+                <h5 class="fw-semibold">Penting:</h5>
                 <br />
                 <p class="paragraft-carousel-panduan fw-medium">
                   01. Keselamatan: Selalu prioritaskan keselamatan Anda. Hindari
@@ -272,7 +271,6 @@
             </div>
           </center>
           <div
-            style="width: 15px; height: 50px; right: 21.5vh; bottom: 0"
             class="position-absolute kotak-biru-kanan"
           ></div>
         </div>
@@ -306,7 +304,7 @@
       <!-- Carousell - panduan end -->
 
       <!-- Footer - panduan start -->
-      <footer style="margin-top: 7rem">
+      <!-- <footer style="margin-top: 7rem">
         <div
           class="d-flex justify-content-between align-content-center mx-5 mb-2"
         >
@@ -400,7 +398,7 @@
             /></a>
           </div>
         </div>
-      </footer>
+      </footer> -->
       <!-- Footer - panduan end -->
     </section-panduan>
     <!-- Vision - panduan end-->
