--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <nav class="navbar nav text-dark p-2 pt-5">
             <ul class="d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
                 <li class="nav-item active">Beranda</li>
-                <li class="nav-item">VR</li>
-                <li class="nav-item">Bandingkan</li>
-                <li class="nav-item">Panduan</li>
+                <li class="nav-item"><a href="page-extra/page-bandingkan.html">Bandingkan</a></li>
+                <li class="nav-item"><a href="page-extra/page-panduan.html">Panduan</a></li>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </ul>
         </nav>
