--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
             </div>
             <div class="top container-fluid ps-5 pe-5">
                 <h1>Lihat VR yang tersedia di dunia</h1>
-                <i class="fa-solid fa-circle-info"></i>
+                <div class="icon-container">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <span class="tooltip-text">Menampilkan 3 VR unggulan saat ini</span>
+                </div>
             </div>
             <div class="middle">
                 <h1 class="text-back">UGGULAN</h1>
@@ -124,7 +127,7 @@
                         <h1>VRONE PLUS</h1>
                         <p>VRONE</p>
                         <center>
-                            <button>Lihat VR <i class="fa-solid fa-angle-right"></i></button>
+                            <button><a class="text-light" href="page-extra/page-spec.html">Lihat VR <i class="fa-solid fa-angle-right"></i></a></button>
                         </center>
                     </div>
                     <div class="card">
@@ -149,7 +152,7 @@
                 <div class="parent d-flex justify-content-between">
                     <div class="side-left">
                         <div class="top"></div>
-                        <div class\="bottom"></div>
+                        <div class="bottom"></div>
                     </div>
                     <div class="quote mt-5 me-5">
                         <center>
