--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
     <section id="frame1" >
         <!-- navbar -->
         <nav class="navbar nav text-dark p-2 pt-5">
-            <ul class="d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
+            <div class="nav-button" id="navButton">
+                ☰
+            </div>
+            <ul class="nav-content d-flex justify-content-center align-items-center gap-4 w-auto bg-white p-2 ps-4 pe-4 rounded rounded-5">
                 <li class="nav-item active">Beranda</li>
                 <li class="nav-item"><a href="page-extra/page-bandingkan.html">Bandingkan</a></li>
                 <li class="nav-item"><a href="page-extra/page-panduan.html">Panduan</a></li>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </ul>
         </nav>
+        
         <!-- end navbar -->
         <!-- content homepage -->
         <div class="parent-content">
@@ -79,8 +83,8 @@
                             <div class="circle"></div>
                         </div>
                         <div class="button">
-                            <button class="btn1">Panduan VR <i class="fa-solid fa-angle-right"></i></button>
-                            <button class="btn2">Manfaat VR <i class="fa-solid fa-angle-right"></i></button>
+                            <button class="btn1 text-light"><a href="page-extra/page-panduan.html" class="text-light">Panduan VR <i class="fa-solid fa-angle-right"></i></a></button>
+                            <button class="btn2"><a href="#frame5">Manfaat VR <i class="fa-solid fa-angle-right"></i></a></button>
                         </div>
                     </div>
                     <div class="right-content">
@@ -487,5 +491,6 @@
           </div>
           <!-- End Halaman -->
            <script src="assets/js/script.js"></script>
+           <script src="assets/js/img-slide.js"></script>
 </body>
 </html>
