--- a/page-extra/page-hasil.html
+++ b/page-extra/page-hasil.html
@@ -153,6 +153,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="../assets/js/script-spec.js"></script>
     <script src="../assets/js/script-hasil.js"></script>
   </body>
 </html>
