update responsive mobile and tablet

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <p class="sub-title ">Virtual Reality</p>
                 <h1 class="title">Lihat Dunia Berbeda</h1>
                 <div class="btn-hp d-flex gap-2">
-                    <button class="btn btn-hp1">Lihat VR</button>
-                    <button class="btn btn-hp2 text-dark">Bandingkan</button>
+                    <button class="btn btn-hp1"><a href="#frame3" class="text-light">Lihat VR</a></button>
+                    <button class="btn btn-hp2 text-dark"><a href="page-extra/page-bandingkan.html">Bandingkan</a></button>
                 </div>
                 <div class="parent-preview">
                     <hr>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="quote mt-5 me-5">
                         <center>
-                            <b>“The metaverse has become the newest macro goal 
+                            <b class="quotes">“The metaverse has become the newest macro goal 
                                 for many of the world’s tech giant”</b>
                                 <br>
                             <i>Matthew Ball</i>
