add fungsi komponen, reponsive

--- a/index.html
+++ b/index.html
@@ -358,26 +358,26 @@
                   <!-- dawadaw -->
                    <div class="row row-cols-2 mx-5">
                     <div class="col">
-                      <img src="assets/img/controller.png" class="border rounded-4">
+                      <img src="assets/img/controller.png" class="border rounded-4" id="kotakKomponen1">
                     </div>
                     <div class="col">
-                      <img src="assets/img/komponen.png" class="border rounded-4">
+                      <img src="assets/img/komponen.png" class="border rounded-4" id="kotakKomponen2">
                     </div>
                     <div class="col">
-                      <img src="assets/img/ikatKepala.png" class="border rounded-4 mt-3">
+                      <img src="assets/img/ikatKepala.png" class="border rounded-4" id="kotakKomponen3">
                     </div>
                     <div class="col">
-                      <img src="assets/img/mesin.jpeg" class="border rounded-4 mt-3">
+                      <img src="assets/img/mesin.png" class="border rounded-4" id="kotakKomponen4">
                     </div>
                    </div>
                   <!-- dawadaw -->
                 </div>
                 <div class="col my-auto">
-                  <img src="assets/img/vrkomponen.png" id="wandiKomponenTengah">
+                  <img src="assets/img/vrkomponen.png" id="isiTengahKomponen">
                 </div>
                 <div class="col float-start my-auto">
-                  <p class="fw-semibold fs-4">Kacamata VR</p>
-                  <p>Layar pada VR adalah salah satu komponen yang sangat penting, karena dengan layar VR kita dapat melihat duina virtual yang digabungkan dengan dunia nyata. Layar pada VR ada beberapa tipe, salah satunya layar tipe amoled yang memberikan tampilan lebih berwarna, tajam dan beresolusi tinggi </p>
+                  <p id="judulIsiTextKomponen" class="fw-semibold fs-4">Kacamata VR</p>
+                  <p id="isiTextKomponen">Layar VR penting karena memungkinkan melihat dunia virtual dengan tampilan warna tajam dan resolusi tinggi. </p>
                 </div>
               </div>
             </div>
@@ -411,7 +411,7 @@
                     placeholder="Nama produk"
                   />
                   <button
-                    class="mx-3 rounded btn fw-semibold text-center"
+                    class="mx-3 my-auto rounded btn fw-semibold justify-content-center align-self-center"
                     id="buttonbandingkankiri"
                   >
                     Bandingkan
