update responsive laptop max width (1400, 1280, 1152, 1024)

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     placeholder="Nama produk"
                   />
                   <button
-                    class="mx-3 my-auto rounded btn fw-semibold justify-content-center align-self-center"
+                    class="mx-3 my-auto rounded btn fw-semibold justify-content-center align-self-center text-center"
                     id="buttonbandingkankiri"
                   >
                     Bandingkan
