mobile res update

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                   memungkinkan manusia untuk melihat dunia yang berbeda.
                 </li>
                 <li class="list-group-item position-relative">
-                  <div class="d-flex">
+                  <div class="d-flex fbutton">
                     <input id="wandiInputFooter" type="text" placeholder="Masukan Pesan" class="form-control rounded-3"/>
                     <button class="btn rounded-3" id="wandiButtonFooter">Kirim</button>
                   </div>
