update add 1920 dan style

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </section>
         <!-- Start Komponen -->
         <div id="frame6">
-            <p class="text-center fs-1 fw-bold py-5">Kenali Komponen VR</p>
+            <p class="text-center py-5">Kenali Komponen VR</p>
             <div class="float-end me-5">
               <div id="dekorasiKomponen1"></div>
               <div class="mt-1" id="dekorasiKomponen2"></div>
